--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "build": "bazel build //:website",
-    "dist": "mkdir public; tar xvf bazel-bin/website.tar -C ./public --wildcards bzlparty_website/dist/** --strip-components=2",
+    "build": "./internal/build_pages.sh",
     "serve": "ibazel run //:serve"
   },
   "devDependencies": {
