refactor: put external css as dependency

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -45,3 +45,6 @@ use_repo(
     "docs_rules_quickjs",
     "docs_tools",
 )
+
+css = use_extension("//internal:extensions.bzl", "css")
+use_repo(css, "css")
